# cogniflow

./: .env.example  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  PROJECT_STATUS.md  README.md  SECURITY.md  docker-compose.replicas.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  integration.yml
cogniflow-api/: README.md  main.py
cogniflow-web/: next.config.ts  pnpm-workspace.yaml
cogniflow-web/src/app/: globals.css  layout.tsx  page.tsx
cogniflow-web/src/app/benchmark/: page.tsx
cogniflow-web/src/app/docs/: page.tsx
cogniflow-web/src/app/playground/: page.tsx
cogniflow-web/src/app/plugins/: page.tsx
cogniflow-web/src/app/use-cases/: page.tsx
cogniflow-web/src/components/landing/: rag-flow.tsx
cogniflow-web/src/components/playground/: acme-replay.tsx
cogniflow-web/src/components/site/: footer.tsx
cogniflow-web/src/data/: benchmark_frameworks.json
cogniflow-web/src/lib/: api.ts  site.ts
demo/: benchmark.py  benchmark_frameworks.py  capture_demo.py  confusable_corpus.py  doc_head_to_head.py  head_to_head.py  okf_head_to_head.py
demo/static_demo/: build_landing.py  build_page.py  index.html  landing.html
docs/: AUDIT_DASHBOARD.md  CONTEXT_API.md  DEMO.md  DOCUMENT_INGESTION.md  EMBEDDERS.md  EXTENDING.md  GENERATION.md  KNOWN_ISSUES.md  RFC_TEMPLATE.md
examples/: heartbeat_demo.py  policy_config.py
launch/: EXPLAINER.md  POSTS.md
scripts/: demo.sh  two_replica_proof.sh
src/cogniflow/: __init__.py  context.py  documents.py  eval_corpus.py  faithfulness.py  generation.py  generators.py  okf.py  pipelines.py  registry.py  rerankers.py  verification.py  writeback.py
src/cogniflow/backends/: __init__.py  embedders.py  graphiti_falkordb.py
src/cogniflow/bridges/: __init__.py
src/cogniflow/bridges/llamaindex/: __init__.py  postprocessor.py  tools.py
src/cogniflow/conformance/: __init__.py  policy_suites.py  suite.py
src/cogniflow/core/: __init__.py  archive.py  audit.py  contracts.py  policies.py  types.py
src/cogniflow/serving/: __init__.py  _dashboard.py  audit.py  http.py  mcp_server.py
tests/: test_api_security.py  test_async_conformance.py  test_audit_api.py  test_audit_replay.py  test_bridge_llamaindex.py  test_cache.py  test_context.py  test_contracts_stable.py  test_contributor_proof.py  test_documents.py  test_durability_and_archive.py  test_embedders.py  test_eval_corpus.py  test_faithfulness.py  test_generation.py  test_http_retry.py  test_local_reranker.py  test_noop_conformance.py  test_okf.py  test_overfetch_config.py  test_pipeline_and_iso.py  test_pipelines.py  test_reference_policies.py  test_registry.py  test_rerankers.py  test_retrieval_quality.py  test_serving.py  test_validity_policy.py  test_verification.py  test_writeback_queue.py
tests/integration/: test_agent_heartbeat.py  test_audit_dashboard.py  test_context_api.py  test_doc_supersession.py  test_embedder_live.py  test_falkordb_substrate.py  test_generation_live.py  test_loop_closes.py  test_neo4j_parity.py  test_okf_supersession.py  test_replay_falkordb.py  test_replay_seeded.py  test_reranker_live.py  test_semantic_recall.py  test_verify_reliability.py
